--- a/essays/marx/index.html
+++ b/essays/marx/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Marx | whirlwinds</title>
-  <link rel="stylesheet" href="build.css">
+  <link rel="stylesheet" href="../../buildarticle.css">
   <meta charset="UTF-8">
   <title>&lt;center&gt;
     &#x5f53;&#x4ee3;&#x8d44;&#x672c;&#x4e3b;&#x4e49;&#x7684;&#x7ade;&#x4e89;&#x4e0e;&#x5784;&#x65ad;&#xff1a;&ldquo;&#x6b27;&#x6d32;&#x8d85;&#x7ea7;&#x8054;&#x8d5b;&CloseCurlyDoubleQuote;&#x5f15;&#x53d1;&#x7684;&#x601d;&#x8003;
@@ -141,31 +141,9 @@
 
 </head>
 
-<body class="vscode-body vscode-light">
+<body class="vscode-body vscode-light" style="color:white">
   <div class="top">
-    <div class="toptx"><a href="../">whirlwinds'</a></div>
-  </div>
-  <div class="hd">
-    <h1>UEFA's</h2>
-      <h3>Capitalization</h3>
-      <!-- <h6>wangweiz22@mails.tsinghua.edu.cn</h4> -->
-  </div>
-  <div id="banner">
-    <ul id="imglist">
-      <li><img src="../img/1.png" alt=""></li>
-      <li><img src="../img/2.png" alt=""></li>
-      <li><img src="../img/3.png" alt=""></li>
-      <li><img src="../img/4.png" alt=""></li>
-      <li><img src="../img/1.png" alt=""></li>
-    </ul>
-    <div class="prev">《</div>
-    <div class="next">》</div>
-    <div id="icolist">
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-    </div>
+    <div class="toptx"><a href="../../">whirlwinds'</a></div>
   </div>
   <h2 id="-当代资本主义的竞争与垄断欧洲超级联赛引发的思考">
     <center> 当代资本主义的竞争与垄断：“欧洲超级联赛”引发的思考
