--- a/essays/poetry/index.html
+++ b/essays/poetry/index.html
@@ -141,34 +141,13 @@
 
 <body class="vscode-body vscode-light">
   <div class="top">
-    <div class="toptx"><a href="../">whirlwinds'</a></div>
+    <div class="toptx"><a href="../../">whirlwinds'</a></div>
   </div>
-  <div class="hd">
-    <h1>Melting Brains</h2>
-      <h3>A World Of No Ideas</h3>
-      <!-- <h6>wangweiz22@mails.tsinghua.edu.cn</h4> -->
-  </div>
-  <div id="banner">
-    <ul id="imglist">
-      <li><img src="../img/1.png" alt=""></li>
-      <li><img src="../img/2.png" alt=""></li>
-      <li><img src="../img/3.png" alt=""></li>
-      <li><img src="../img/4.png" alt=""></li>
-      <li><img src="../img/1.png" alt=""></li>
-    </ul>
-    <div class="prev">《</div>
-    <div class="next">》</div>
-    <div id="icolist">
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-    </div>
-  </div>
+  
   <font face="汇文明朝体">
     <br>
     <div style="
-    margin:1px 20px 20px 250px;
+    margin:100px 20px 20px 250px;
     padding:10px 120px 5px 50px;
     background: url(src/bgs.jpg) no-repeat;
     background-size:100%;
