--- a/essays/taiwan/index.html
+++ b/essays/taiwan/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Taiwan | whirlwinds</title>
-  <link rel="stylesheet" href="build.css">
+  <link rel="stylesheet" href="../../buildarticle.css">
   <meta charset="UTF-8">
   <title>&lt;center&gt;
     &#x7531;&#x6c11;&#x8fdb;&#x515a;&#x51fa;&#x53d1;&#x770b;&#x4e24;&#x5cb8;&#x5173;&#x7cfb;&#x53ca;&#x548c;&#x5e73;&#x7edf;&#x4e00;&#x524d;&#x666f;
@@ -136,32 +136,10 @@
 </head>
 
 <div class="top">
-  <div class="toptx"><a href="../">whirlwinds'</a></div>
-</div>
-<div class="hd">
-  <h1>On Taiwan</h2>
-    <h3>About Unification</h3>
-    <!-- <h6>wangweiz22@mails.tsinghua.edu.cn</h4> -->
-</div>
-<div id="banner">
-  <ul id="imglist">
-    <li><img src="../img/1.png" alt=""></li>
-    <li><img src="../img/2.png" alt=""></li>
-    <li><img src="../img/3.png" alt=""></li>
-    <li><img src="../img/4.png" alt=""></li>
-    <li><img src="../img/1.png" alt=""></li>
-  </ul>
-  <div class="prev">《</div>
-  <div class="next">》</div>
-  <div id="icolist">
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-  </div>
+  <div class="toptx"><a href="../../">whirlwinds'</a></div>
 </div>
 
-<body class="vscode-body vscode-light">
+<body style="color:white" class="vscode-body vscode-light">
   <h3 id="-由民进党出发看两岸关系及和平统一前景">
     <center> 由民进党出发看两岸关系及和平统一前景
   </h3>
