--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
         </div>
     </div>
     <div class="psnl">
-        <h3>INFO</h3>
+        <h3>ABOUT</h3>
         <ul id="psl">
             <li><a href="info/">
                 <img src="img/portrait.jpg" alt="">
                 On Myself
             </a></li>
             <li><a href="">
-                <img src="img/1.png" alt="">
+                <img src="img/1i.png" alt="">
                 Career
             </a></li>
             <li><a href="travel/">
-                <img src="img/trav.png" alt="">
+                <img src="img/bis.jpg" alt="">
                 Travelling
             </a></li>
             <li><a href="logs/">
-                <img src="img/3.png" alt="">
+                <img src="img/trav.png" alt="">
                 Logs
             </a></li>
         </ul>
@@ -63,19 +63,19 @@
         <ul id="atc">
             <li><a href="essays/poetry/">
                 <img src="img/cat.JPG" alt="">
-                On Poetry
+                Poetry
             </a></li>
             <li><a href="essays/taiwan/">
-                <img src="img/1.png" alt="">
-                On Taiwan
+                <img src="img/bqcs.png" alt="">
+                Taiwan
             </a></li>
             <li><a href="essays/marx/">
                 <img src="img/4.png" alt="">
-                On Marxism
+                Marxism
             </a></li>
             <li><a href="">
                 <img src="img/3.png" alt="">
-                Cantonese Learning
+                Cantonese
             </a></li>
         </ul>
         <ul id="atc">
